# aiueos-cljc-contract

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  bb.edn  deps.edn
.github/workflows/: ci.yml
90-docs/adr/: 0001-aiueos-phase0-capability-os.md  0002-host-abi-topic-bus.md  0007-virtual-computer-surface.md  0010-virtual-computer-surface.md
docs/: coverage.edn  index.html  rust-migration.md
examples/: system.aiueos.edn
examples/apps/: notes.edn
examples/authoring/: sensor.edn  sensor.wat
examples/components/: fs-service.edn  log-service.edn
examples/computer/: computer-use.edn  drive.edn  drive.wat  evil-host-grab.edn  evil.wat  policy.edn  system.aiueos.edn
examples/computer/backing/: Dockerfile  README.md  run.sh  surface.mjs
examples/drivers/: virtio-blk.edn
examples/policy/: default.edn
examples/robot/: actuator.edn  actuator.wat  planner.edn  planner.wat  robot.aiueos.edn  sensor.edn  sensor.wat
resources/aiueos/: broker_contract.edn  policy_contract.edn
src/: audit.rs  backing.rs  broker.rs  edn.rs  error.rs  graph.rs  host.rs  lib.rs  manifest.rs  policy.rs  runtime.rs  safe.rs  surface.rs  topic.rs
src/aiueos/: broker.cljc  cli.cljc  contract.cljc  decide.cljc  execute.cljc  graph.cljc  launcher.cljc  manifest.cljc  policy.cljc  signing.cljc  surface.cljc
test/aiueos/: broker_test.cljc  cli_test.cljc  contract_test.cljc  decide_test.cljc  execute_test.cljc  graph_test.cljc  launcher_test.cljc  manifest_test.cljc  policy_test.cljc  signing_test.cljc  surface_test.cljc
tests/: admit.rs  boot.rs  cli.rs  computer.rs  enums_edn.rs  errors.rs  host_abi.rs  launch.rs  parsing.rs  robot.rs  runtime.rs  signing.rs  system.rs
