[package]
name = "aiueos"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "aiueos — Kotoba-defined, Kototama-executed, capability-secure WebAssembly OS substrate. Phase-0 MVP: component manifests + capability graph + policy reasoner + capability broker + safe-kotoba checker + audit log + a wasmtime component runner driven by the kototama CLJ→wasm compiler."

[[bin]]
name = "aiueos"
path = "src/bin/aiueos.rs"

[dependencies]
# Manifests, policy, device schemas, audit log — everything is "kotoba" (EDN).
# Git dependency so a standalone clone builds without the monorepo. Local dev can
# override to the in-tree copy via .cargo/config.toml (paths override).
kotoba-edn = { git = "https://github.com/com-junkawasaki/kotoba", branch = "main", package = "kotoba-edn" }
# NOTE: the CLJ→wasm compiler `kototama` is intentionally NOT a dependency here.
# Its own Cargo.toml uses path deps to sibling repos, so it cannot resolve in a
# standalone clone (it breaks even `cargo build` via dependency resolution). The
# `kototama` feature below is kept declared (so the `#[cfg(feature = "kototama")]`
# compile-from-source code stays known and warning-free) but dormant; CLJ
# compilation returns once kototama is published as a standalone crate, at which
# point this becomes `kototama = { git = ... }` + `dep:kototama` in the feature.
# Execution engine — the broker enforces fuel + memory-page limits here. Version
# pinned to kotoba's workspace (22) so the build is shared, not duplicated.
wasmtime = { version = "22", optional = true }
# Host-function trap errors (wasmtime's error type). Already in the wasmtime tree.
anyhow = { version = "1", optional = true }

[features]
# The semantic core — manifest, capability graph, policy reasoner, broker,
# safe-subset checker, audit, topic bus — needs no heavy deps and is always built.
#
# `wasm-runtime` adds *execution*: instantiate wasm (binary or WAT) under fuel +
# memory limits with the broker-mediated `aiueos:host` ABI. Needs only wasmtime.
#
# `kototama` adds *compilation* of CLJ/Kotoba source → wasm (pulls the kototama
# toolchain) and implies `wasm-runtime` to run the result. Split out so the host
# ABI / WAT components build and test without the CLJ compiler.
# Default = execute wasm (binary/WAT). The CLJ compiler (`kototama`) is opt-in
# because it only resolves inside the monorepo (path dep with sibling path deps).
default = ["wasm-runtime"]
wasm-runtime = ["dep:wasmtime", "dep:anyhow"]
# Dormant: declared so cfg gates are known, but adds no dependency (see note above).
# Enabling it without the kototama crate present is unsupported (monorepo-only).
kototama = ["wasm-runtime"]
