[package]
name = "aiueos"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "aiueos — Kotoba-defined, Kototama-executed, capability-secure WebAssembly OS substrate. Phase-0 MVP: component manifests + capability graph + policy reasoner + capability broker + safe-kotoba checker + audit log + a wasmtime component runner driven by the kototama CLJ→wasm compiler."

[[bin]]
name = "aiueos"
path = "src/bin/aiueos.rs"

[dependencies]
# Manifests, policy, device schemas, audit log — everything is "kotoba" (EDN).
# Git dependency so a standalone clone builds without the monorepo. Local dev can
# override to the in-tree copy via .cargo/config.toml (paths override).
kotoba-edn = { git = "https://github.com/com-junkawasaki/kotoba", branch = "main", package = "kotoba-edn" }
kotoba-core = { git = "https://github.com/com-junkawasaki/kotoba", branch = "main", package = "kotoba-core", optional = true }
kotoba-datomic = { git = "https://github.com/com-junkawasaki/kotoba", branch = "main", package = "kotoba-datomic", optional = true }
# CLJ/Kotoba source compiler. The feature is still named `kototama` for the
# public aiueos surface, but the implementation is the maintained kotoba-clj
# compiler crate. Optional so standalone users can keep the lightweight WAT/wasm
# runtime without pulling the compiler. Git dependency (same as kotoba-edn) so a
# standalone clone resolves it without a sibling checkout; local dev can override
# to the in-tree copy via .cargo/config.toml (paths override).
kotoba-clj = { git = "https://github.com/com-junkawasaki/kotoba", branch = "main", package = "kotoba-clj", default-features = false, optional = true }
# Execution engine — the broker enforces fuel + memory-page limits here. Version
# pinned to kotoba's workspace (22) so the build is shared, not duplicated.
wasmtime = { version = "22", optional = true }
# Host-function trap errors (wasmtime's error type). Already in the wasmtime tree.
anyhow = { version = "1", optional = true }
# wasm artifact integrity (:aiueos/wasm-sha256 tamper check). Tiny, pure-Rust.
sha2 = { version = "0.10", optional = true }
# Manifest authenticity (:aiueos/signature) — ed25519 over the identity↔artifact
# binding. Pure-Rust, well-audited; verification only (no signing in the lib).
ed25519-dalek = { version = "2", optional = true }

[features]
# The semantic core — manifest, capability graph, policy reasoner, broker,
# safe-subset checker, audit, topic bus — needs no heavy deps and is always built.
#
# `wasm-runtime` adds *execution*: instantiate wasm (binary or WAT) under fuel +
# memory limits with the broker-mediated `aiueos:host` ABI. Needs only wasmtime.
#
# `kototama` adds *compilation* of CLJ/Kotoba source → wasm (via kotoba-clj) and
# implies `wasm-runtime` to run the result. Split out so the host ABI / WAT
# components build and test without the CLJ compiler.
# Default = execute wasm (binary/WAT). The CLJ compiler is opt-in because it
# resolves via the sibling kotoba checkout in this monorepo layout.
# `signing` adds ed25519 verification of signed manifests (ADR-0003). Pure crypto,
# independent of the wasm runtime; on by default since authenticity is core to the
# security model. The minimal core build (--no-default-features) omits it.
default = ["wasm-runtime", "signing"]
wasm-runtime = ["dep:wasmtime", "dep:anyhow", "dep:sha2"]
signing = ["dep:ed25519-dalek"]
# `computer-backing` wires the `computer-virtual` providers (ADR-0007) to an external
# host-side daemon (examples/computer/backing) over a JSON-line ABI, so gated/audited
# synthetic input drives a REAL virtual screen. Off by default (and out of CI): it
# spawns a subprocess the operator configures via AIUEOS_COMPUTER_BACKING. The
# in-process audit ledger stays the deterministic contract when this is off.
computer-backing = ["wasm-runtime"]
kototama = ["wasm-runtime", "dep:kotoba-clj", "dep:kotoba-core", "dep:kotoba-datomic"]
